@@ -8,7 +8,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
    )
 Depends: R (>= 3.0.0), utils, car, sandwich
 Imports: abind, colorspace, Hmisc, MASS, e1071, foreign, haven, readstata13, readxl, graphics, grDevices, stats
-Suggests: datasets
+Suggests: boot, datasets
 ByteCompile: yes
 Description:
   Various statistical, graphics, and data-management functions used by the Rcmdr package in the R Commander GUI for R. 
